--- a/src/style.css
+++ b/src/style.css
@@ -61,8 +61,8 @@ header{
     align-items: flex-end;
     height: 100%;
     margin-right: 5px;
-    font-weight: lighter;
-    font-size: 20px;
+    font-weight: bold;
+    font-size: medium;
 }
 .player_nameCon img{
     height: 100%;
